<resources>
    <string name="app_name">PopularMovies</string>
    <string name="action_settings">Settings</string>
    <string name="image_size_url">w185/</string>
    <string name="backdrop_size_url">w300</string>
    <string name="movie_detail_info">%2$s\nAverage vote: %1$s</string>
    <string name="sort_by_poularity">Sort by popularity</string>
    <string name="sort_by_rate">Sort by rate</string>
    <string name="no_network_connection">No network connection! Please connect it!</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="overview">Overview</string>
    <string name="favorites">Favorites</string>
    <string name="share">share trailer</string>
    <string name="please_choose_movie">Choose a movie from the list on the left!</string>
</resources>
