<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">
    <item
        android:id="@+id/sort"
        android:orderInCategory="100"
        android:title="@string/sort_by_poularity"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:orderInCategory="200"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        style="@style/share_icon_visibility"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
