<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_detail_backdrop_height"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="@dimen/activity_detail_title_bottom_margin"
            app:expandedTitleMarginEnd="@dimen/activity_detail_title_end_margin"
            app:expandedTitleMarginStart="@dimen/activity_detail_title_start_margin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:id="@+id/toolbar_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_toolbar_play_btn"
                android:clickable="true"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_detail_view_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="@dimen/activity_detail_poster_width"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_detail_view_margin"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/activity_detail_info_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_detail_divider_size"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/activity_detail_view_margin"/>

            <TextView
                android:id="@+id/overview_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_detail_view_margin"
                android:text="@string/overview"
                android:textSize="@dimen/activity_detail_subtitle_text_size" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_detail_view_margin"
                android:textSize="@dimen/activity_detail_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_detail_divider_size"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/activity_detail_view_margin"/>

            <TextView
                android:id="@+id/trailers_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_detail_view_margin"
                android:text="@string/trailers"
                android:textSize="@dimen/activity_detail_subtitle_text_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_detail_view_margin"></android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_detail_divider_size"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/activity_detail_view_margin"/>

            <TextView
                android:id="@+id/reviews_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_detail_view_margin"
                android:text="@string/reviews"
                android:textSize="@dimen/activity_detail_subtitle_text_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/review_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_detail_view_margin"></android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_favorite"
        android:clickable="true"
        app:borderWidth="0dp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

    <FrameLayout
        android:id="@+id/mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMask">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_movie"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_detail_text_size"/>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>